# bank

./: .python-version  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: custom.md  feature_request.yml  task_template.yml
.github/workflows/: CICD.yml
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
config/urls/: __init__.py  dev.py  prod.py
