[project]
name = "6dj-bank-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.28.0"

[tool.isort]
profile = "black"  # black과 같은 스타일 적용
line_length = 88

[tool.black]
line-length = 88

