[project]
name = "6dj-bank-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.28.0"

[tool.isort]
profile = "black"  # Black 스타일을 따르도록 설정
multi_line_output = 3  # Black의 자동 줄바꿈 스타일과 일치
include_trailing_comma = true  # Black과 같은 trailing comma 사용
line_length = 88  # Black과 동일한 줄 길이 제한 적용
force_grid_wrap = 0  # 자동 줄바꿈 비활성화
combine_as_imports = true  # as import 병합

[tool.black]
line-length = 88

